# mkp224o-cuda

./: .gitignore  AGENTS.md  GNUmakefile.in  README.md  base16.h  base16_from.c  base32.h  base32_from.c  base32_to.c  base64.h  base64_from.c  calcest.c  common.h  configure.ac  cpucount.c  cuda_ed25519.cuh  cuda_worker.cu  cuda_worker.h  filters.h  filters_common.inc.h  filters_main.inc.h  filters_worker.inc.h  ifilter_bitsum.h  ioutil.c  keccak.c  main.c  test_base16.c  test_base32.c  worker.c  worker.h  worker_batch.inc.h  worker_batch_pass.inc.h  yaml.c
.github/workflows/: build.yml
ed25519/: ed25519_impl_post.h  ed25519_impl_pre.h
ed25519/amd64-51-30k/: fe25519_batchinvert.c  fe25519_invert.c  fe25519_pack.c  fe25519_pow2523.c  fe25519_sub.c  ge25519.h  ge25519_base.c  ge25519_double_scalarmult.c  ge25519_scalarmult_base.c  ge25519_unpackneg.c  sc25519.h  sc25519_from64bytes.c  sc25519_mul_shortsc.c  sc25519_to32bytes.c  sc25519_window4.c
ed25519/amd64-64-24k/: fe25519_invert.c  fe25519_pack.c  fe25519_pow2523.c  fe25519_unpack.c  ge25519.h  ge25519_batchpack.c  ge25519_double_scalarmult.c  ge25519_multi_scalarmult.c  ge25519_scalarmult_base.c  ge25519_unpackneg.c  index_heap.c  sc25519.h  sc25519_from32bytes.c  sc25519_slide.c  sign.c
ed25519/ed25519-donna/: curve25519-donna-32bit.h  curve25519-donna-64bit.h  curve25519-donna-helpers.h  curve25519-donna-sse2.h  ed25519-donna-32bit-sse2.h  ed25519-donna-32bit-tables.h  ed25519-donna-64bit-sse2.h  ed25519-donna-64bit-tables.h  ed25519-donna-64bit-x86-32bit.h  ed25519-donna-64bit-x86.h  ed25519-donna-basepoint-table.h  ed25519-donna-batchverify.h  ed25519-donna-impl-base.h  ed25519-donna-impl-sse2.h  ed25519-donna-portable-identify.h  ed25519-donna-portable.h  ed25519-donna.h  ed25519-hash-custom.h  ed25519-hash.h  ed25519-randombytes-custom.h  ed25519-randombytes.h  ed25519.c  ed25519.h  modm-donna-32bit.h  modm-donna-64bit.h  test-internals.c  test-ticks.h  test.c
ed25519/ref10/: fe.h  fe_0.c  fe_1.c  fe_add.c  fe_batchinvert.c  fe_cmov.c  fe_copy.c  fe_frombytes.c  fe_isnegative.c  fe_isnonzero.c  fe_mul.c  fe_neg.c  fe_sq.c  fe_sq2.c  fe_sub.c  fe_tobytes.c  ge.h  ge_add.c  ge_add.h  ge_double_scalarmult.c  ge_frombytes.c  ge_madd.c  ge_madd.h  ge_msub.c  ge_msub.h  ge_p1p1_to_p2.c  ge_p1p1_to_p3.c  ge_p2_dbl.c  ge_p2_dbl.h  ge_p3_batchtobytes.c  ge_p3_dbl.c  ge_p3_to_cached.c  ge_p3_to_p2.c  ge_scalarmult_base.c  ge_sub.c  ge_sub.h  keypair.c  pow22523.h  pow225521.h  sc.h  (+2 more)
